--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="message d-none card-footer text-muted">
         <h1 class="text-muted text-capitalize"></h1>
         <div class="home-page mt-4 mb-4">
-          <a href="/index.html" class="text-decoration-none h5"
+          <a href="https://imanojg-hub.github.io/secret-message-app/" class="text-decoration-none h5"
             >Create your own message</a
           >
         </div>
