--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="styles.css" />
     <script src="script.js" defer></script>
   </head>
   <body>
@@ -34,8 +35,10 @@
           <label class="card-title" style="font-size: 17px"
             >Enter your secret message</label
           >
-          <input id="user-input" type="text" class="mt-2" style="width: 30%" />
-          <button class="btn btn-primary mt-3">Send</button>
+          <input id="user-input" type="text" class="mt-2" style="width: 25%" />
+          <button class="btn btn-primary mt-3" style="padding: 6px 35px">
+            Send
+          </button>
         </form>
       </div>
       <div
